# my-kanban

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  CONTEXT_STRATEGY_ANALYSIS.md  DEBUG_HIGHLIGHT_ISSUE.md  DEBUG_HOVER_MENU.md  GRAPH_VIEW_DESIGN_IDEAS.md  GRAPH_VIEW_IMPLEMENTATION.md  HIGHLIGHT_EDGE_CASES.md  HIGHLIGHT_FIXES.md  HIGHLIGHT_FIX_TEST_GUIDE.md  HIGHLIGHT_TEST_PLAN.md  INSTALL_INSTRUCTIONS.txt  LINK_SYSTEM.md  PHASE3_PLAN.md  QUICKSTART.md  QUICK_FIX_HOVER.md  README.md  SYNTAX_HIGHLIGHTING_SETUP.md  firebase.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: TOC_FEATURE.md  index.html
mcp-kanban-server/: CODE_REVIEW.md  README.md  SETUP_KR.md  claude_desktop_config.example.json  package.json
mcp-kanban-server/src/: index.ts
references/: IMPROVEMENT_ROADMAP.md  NOTION_PM_CRITIQUE.md
src/: App.tsx  firebase.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_watcher.rs  git_shell.rs  lib.rs  terminal.rs
src/components/: ConfirmModal.css  ConfirmModal.tsx  ContextMenu.css  ContextMenu.tsx  CreatePageModal.css  CreatePageModal.tsx  CreateTodoModal.css  CreateTodoModal.tsx  FindBar.css  FindBar.tsx  GitButton.css  GitButton.tsx  GitModal.css  GitModal.tsx  HighlightHoverMenu.css  HighlightHoverMenu.tsx  HighlightPalette.css  HighlightPalette.tsx  InstallPrompt.css  InstallPrompt.tsx  Layout.css  Layout.tsx  MemoCard.css  MemoCard.tsx  MemoPanel.css  (+22 more)
workspace-template/: README.md
(+72 files in other folders)
